<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainSwipeToRefreshLayout"
    tools:context="com.reetfreelance.rm.stormscoming.ui.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient">

        <LinearLayout
            android:id="@+id/cityDetailsLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/cityNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                style="@style/cityName"
                android:text="@string/defaultCity" />
        </LinearLayout>

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultTempValue"
            style="@style/weatherTempText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/summaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/defaultWeatherSummary"
            style="@style/weatherSummary"
            app:layout_constraintBottom_toTopOf="@+id/timestampTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/timestampTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/defaultTimestamp"
            style="@style/timestamp"
            app:layout_constraintBottom_toTopOf="@+id/temperatureTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fillViewport="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperatureTextView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/precipHumidityLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/humidityLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/humidityLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidityLabel"
                            style="@style/addtionalDataLabel"/>

                        <TextView
                            android:id="@+id/humidityValueTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/defaultHumidity"
                            style="@style/additionalDataValue"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/precipLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/precipLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/precipitationLabel"
                            style="@style/addtionalDataLabel"/>

                        <TextView
                            android:id="@+id/precipValueTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/defaultPrecipitation"
                            style="@style/additionalDataValue"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/additionalMessageTextView"
                    android:layout_marginTop="48dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/additionalMessage"
                    android:text="@string/defaultAdditionalMessage" />
            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/weatherIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_clear_day"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/summaryTextView"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cityDetailsLinearLayout" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/hourlyWeatherButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="HOURLY"
                style="@style/lowerMainButtons"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/dailyWeatherButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/lowerMainButtons"
                android:text="DAILY" />

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.SwipeRefreshLayout>

